--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "start": "tsc && node ."
+        "start": "node dist/index.js",
+        "prestart": "npm run build"
     },
     "author": "Michał Parchanowicz",
     "license": "ISC",
