--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
+        "dev": "nodemon",
         "start": "node dist/index.js",
         "prestart": "npm run build"
     },
@@ -14,6 +15,9 @@
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.11.19",
+        "nodemon": "^3.1.0",
+        "ts-node": "^10.9.2",
+        "tsx": "^4.7.1",
         "typescript": "^5.3.3"
     },
     "dependencies": {
