--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
     "name": "online-shop-server",
     "version": "1.0.0",
     "description": "Online shop server",
-    "main": "dist/index.js",
-    "type": "module",
+    "main": "src/index.ts",
     "scripts": {
-        "build": "tsc",
-        "dev": "nodemon",
-        "start": "node dist/index.js",
-        "prestart": "npm run build"
+        "start": "ts-node src/index.ts",
+        "dev": "nodemon"
     },
     "author": "Michał Parchanowicz",
     "license": "ISC",
@@ -17,13 +14,12 @@
         "@types/node": "^20.11.19",
         "nodemon": "^3.1.0",
         "ts-node": "^10.9.2",
-        "tsx": "^4.7.1",
         "typescript": "^5.3.3"
     },
     "dependencies": {
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
-        "mongoose": "^8.1.3"
+        "mongoose": "^8.2.2"
     }
 }
