--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
-    "name": "online-shop-server",
-    "version": "1.0.0",
-    "description": "Online shop server",
-    "main": "src/index.ts",
-    "scripts": {
-        "start": "ts-node src/index.ts",
-        "dev": "nodemon"
-    },
-    "author": "Michał Parchanowicz",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/node": "^20.11.19",
-        "nodemon": "^3.1.0",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
-    },
-    "dependencies": {
-        "dotenv": "^16.4.5",
-        "express": "^4.18.2",
-        "mongoose": "^8.2.2"
-    }
+  "name": "online-shop-server",
+  "version": "1.0.0",
+  "description": "Online shop server",
+  "main": "server/index.ts",
+  "scripts": {
+    "start": "ts-node server/index.ts",
+    "dev": "nodemon",
+    "lint": "eslint server/**/*.ts",
+    "format": "eslint server/**/*.ts --fix",
+    "prepare": "husky install",
+    "test": ""
+  },
+  "author": "Michał Parchanowicz",
+  "license": "ISC",
+  "lint-staged": {
+    "*.json": [
+      "prettier --write"
+    ],
+    "*.ts": [
+      "prettier --write",
+      "eslint --max-warnings 0"
+    ]
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint": "^8.57.0",
+    "husky": "^8.0.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.2"
+  }
 }
