--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon",
     "lint": "eslint server/**/*.ts",
     "format": "eslint server/**/*.ts --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "vercel-build": "echo build"
   },
   "author": "Michał Parchanowicz",
   "license": "ISC",
@@ -41,6 +42,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2"
   }
